@@ -30,6 +30,8 @@ PIG-4333: Split BigData tests into multiple groups (rohini)
  
 BUG FIXES
 
+PIG-4361: Fix perl script problem in TestStreaming.java (liyun via xuefu)
+
 PIG-4354: Port local mode tests to Tez - part3 (daijy)
 
 PIG-4338: Fix test failures with JDK8 (rohini)
